# fair-shares

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  404.html  CITATION.cff  LICENSE  Makefile  README.md  Snakefile  index.html  loop.sh.backup  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
CONTRIBUTING/: index.html
api/: index.html
api/allocations/budgets/: index.html
api/allocations/manager/: index.html
api/allocations/pathways/: index.html
api/config/models/: index.html
api/utils/adjustments/: index.html
api/utils/core/: index.html
api/utils/data/: index.html
api/utils/math/: index.html
api/utils/validation/: index.html
api/validation/convergence/: index.html
conf/data_sources/: data_sources_unified.yaml
data/emissions/primap-202503/: CITATION.md
data/gdp/imf-2025/: CITATION.md  imf-dm-export-20251119_MER.xls  imf-dm-export-20251119_PPP.xls
data/gdp/wdi-2025/: API_NY.GDP.MKTP.CD_DS2_en_csv_v2_5607117.csv  API_NY.GDP.MKTP.PP.CD_DS2_en_csv_v2_1090665.csv  CITATION.md
data/gini/unu-wider-2025/: CITATION.md
data/gini/wid-2025/: WID-20NOV2025.xlsx  citation.txt
data/population/un-owid-2025/: CITATION.md  (+1 more)
data/rcbs/: rcbs.yaml
data/regions/: CITATION.md
data/user/: README.md
dev-guide/: index.html
dev-guide/adding-approaches/: index.html
dev-guide/adding-data-sources/: index.html
dev-guide/docs-links/: index.html
dev-guide/docstring-template/: index.html
dev-guide/testing-checklist/: index.html
docs/: .audit-iteration-10-final.md  .audit-iteration-8-findings.md  CONTRIBUTING.md  index.md  quickstart.md
docs/api/: index.md
docs/dev-guide/: adding-approaches.md  adding-data-sources.md  docs-links.md  docstring-template.md  index.md  testing-checklist.md
docs/javascripts/: collapsible-api.js  mathjax.js
docs/science/: allocations.md  climate-equity-concepts.md  glossary.md  index.md  other-operations.md  parameter-effects.md  principle-to-code.md  references.md
docs/stylesheets/: extra.css
docs/user-guide/: approach-catalog.md  country-fair-shares.md  data-sources.md  iamc-regional-fair-shares.md  index.md  output-schema.md
javascripts/: mathjax.js
notebooks/: 100_data_preprocess_pathways.py  100_data_preprocess_rcbs.py  101_data_preprocess_emiss_primap-202503.py  102_data_preprocess_gdp_imf-2025.py  102_data_preprocess_gdp_wdi-2025.py  103_data_preprocess_population_un-owid-2025.py  104_data_preprocess_scenarios_ar6.py  105_data_preprocess_gini_unu-wider-2025.py  105_data_preprocess_gini_wid-2025.py  106_generate_pathways_from_rcbs.py  301_custom_fair_share_allocation.py  302_example_templates_budget_allocations.py  303_example_templates_pathway_allocations.py  401_custom_iamc_allocation.py  402_example_iamc_budget_allocations.py  403_example_iamc_pathway_allocations.py
notebooks/docs/: parameter_effects_examples.py
quickstart/: index.html
science/: index.html
science/allocations/: index.html
science/climate-equity-concepts/: index.html
science/glossary/: index.html
science/other-operations/: index.html
science/parameter-effects/: index.html
science/principle-to-code/: index.html
science/references/: index.html
scripts/: build_references.py  extract_validate_citations.py  update_docs_links.py
search/: search_index.json
src/fair_shares/: __init__.py  run_notebook.py
tests/: conftest.py
tests/integration/: test_config_parameter_expansion.py  test_manager_integration.py  test_run_notebook.py  test_unit_conversion.py
tests/unit/: test_allocation_data_scenarios.py  test_allocation_equivalence.py  test_allocation_manager.py  test_allocation_math_properties.py  test_allocation_parameters.py  test_cumulative_convergence_strict.py  test_edge_cases.py  test_error_messages.py  test_harmonisation_no_neg.py  test_input_validation.py  test_math_edge_cases.py  test_rcb_calculations.py  test_rcb_generator_config.py  test_rcb_pathway_equivalence.py  test_rcb_pathways.py  test_responsibility_window.py  test_utils_basic.py  test_validation_models.py
tools/: docs-sync-check.py
user-guide/: index.html
user-guide/approach-catalog/: index.html
user-guide/country-fair-shares/: index.html
user-guide/data-sources/: index.html
user-guide/iamc-regional-fair-shares/: index.html
user-guide/output-schema/: index.html
(+19 files in other folders)
