[project]
name = "fair-shares"
version = "0.2.0"
description = "Python package for calculating fair shares of global climate mitigation effort."
authors = [
    { name = "Setu Pelz" },
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
dependencies = [
    "attrs>=24.3.0",
    "browser-use",
    "country-converter>=1.0.0",
    "fastparquet>=2024.11.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.3.4",
    "jupytext>=1.16.0",
    "matplotlib>=3.9.4",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.30.0",
    "netcdf4>=1.7.2",
    "notebook>=7.5.2",
    "openpyxl>=3.1.5",
    "openscm-units>=0.6.3",
    "pandas>=2.0.0",
    "pandas-openscm>=0.8.0",
    "papermill>=2.6.0",
    "plotly>=5.18.0",
    "pyam-iamc>=3.0.0",
    "pyarrow>=21.0.0",
    "pycollocation>=0.6.0a0",
    "pydantic>=2.0.0",
    "pyprojroot>=0.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-calamine>=0.5.4",
    "ruff>=0.8.6",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "snakemake>=7.32.4",
    "tqdm>=4.66.0",
    "xarray>=2024.7.0",
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://setupelz.github.io/fair-shares/"
Documentation = "https://setupelz.github.io/fair-shares/"
Repository = "https://github.com/setupelz/fair-shares"
Issues = "https://github.com/setupelz/fair-shares/issues"

[project.scripts]
run-notebook = "fair_shares.run_notebook:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-jupyter>=0.24.0",
    "jupyterlab>=4.3.0",
]
units = ["openscm-units>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fair_shares"]

[tool.mypy]
strict = true
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
follow_imports = "normal"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
src = ["src"]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "D200", # One-line docstring should fit on one line
    "D400", # First line should end with a period
    "E501", # Line too long (many LaTeX equations exceed 88 chars)
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["D", "E501"]
"notebooks/*" = ["D", "E402"]  # E402: imports not at top (common in notebook cells)

[tool.ruff.lint.isort]
known-first-party = ["fair_shares"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "data_validation: Data validation tests",
    "pipeline: Pipeline tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",  # treat whitespace sanely
]

[dependency-groups]
dev = [
    "snakefmt>=0.10.3",
]

